scss/_alert.scss
.alert {
  display: block;
  position: relative;
  z-index: 0;
  padding: $alert-padding-y $alert-padding-x;
  margin-bottom: $spacer;
  // margin-bottom: ($alert-shadow-height * 2) + $spacer;  // Compensate for box shadow below
  // color: #fff;
  font-size: $alert-font-size;
  line-height: $alert-line-height;
  // background-color: $coral;

  // Icons for message and close button
  &::before,
  .close {
    font-size: $alert-icon-size;
    line-height: $alert-line-height;
    color: #fff;
  }

  &::before {
    @extend .icon;

    margin-right: $alert-padding-x / 2;
  }

  // Positioning
  // &.alert-bottom {
  //   margin-top: ($alert-shadow-height * 2) + $spacer;  // Compensate for box shadow above
  // }

  // Size options
  &.alert-sm {
    // @TODO: make this a thing
  }

  .close {
    position: absolute;
    top: 50%;
    margin-top: -($alert-icon-size / 2);
    right: $alert-padding-x;
  }

  ///
  /// Alert states, based on `$alert-states` map
  ///

  @each $state, $state-props in $alert-states {
    $state-color: map-get($state-props, color);
    $state-bg: map-get($state-props, bg);
    $state-link-color: map-get($state-props, link);
    $state-icon: map-get($state-props, icon);

    &.alert-#{ $state } {
      @include alert-bg($bg-color: $state-bg, $text-color: $state-color, $icon: $state-icon);

      margin-bottom: $alert-shadow-height * 3;
      // TODO: Create mixin for the fade-out box shadow effect
      box-shadow: 0 $alert-shadow-height 0 0 transparentize($state-bg, .5),
                  0 ($alert-shadow-height * 2) 0 0 transparentize($state-bg, .75);

      &.alert-bottom {
        margin-top: $alert-shadow-height * 3;
        box-shadow: 0 (-$alert-shadow-height) 0 0 transparentize($state-bg, .5),
                    0 (-$alert-shadow-height * 2) 0 0 transparentize($state-bg, .75);
      }
    }
  }

}

